--- a/20150603/HelloJNI/app/build.gradle
+++ b/20150603/HelloJNI/app/build.gradle
@@ -10,6 +10,11 @@ android {
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
+
+        ndk {
+            moduleName 'hello'
+            abiFilters 'arm64-v8a'
+        }
     }
     buildTypes {
         release {
