--- a/20150603/JNIToast/app/build.gradle
+++ b/20150603/JNIToast/app/build.gradle
@@ -10,6 +10,11 @@ android {
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
+
+        ndk {
+            moduleName 'jnitoast'
+            abiFilters 'arm64-v8a'
+        }
     }
     buildTypes {
         release {
@@ -21,6 +26,4 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.google.android.gms:play-services:7.5.0'
-    compile 'com.android.support:appcompat-v7:22.2.0'
 }
