--- a/20150603/JNIToast/app/build.gradle
+++ b/20150603/JNIToast/app/build.gradle
@@ -14,6 +14,7 @@ android {
         ndk {
             moduleName 'jnitoast'
             abiFilters 'arm64-v8a'
+            ldLibs 'log'
         }
     }
     buildTypes {
