backlight control: currently fail due to permission

--- a/20150604/NDKclass4thday/settings.gradle
+++ b/20150604/NDKclass4thday/settings.gradle
@@ -1,1 +1,1 @@
-include ':exceptionTest', ':exceptionTest2', ':imagetest'
+include ':exceptionTest', ':exceptionTest2', ':imagetest', ':backlightapp'
