event loop for native activity

--- a/20150605/NDKClass5thday/nativeactivity/build.gradle
+++ b/20150605/NDKClass5thday/nativeactivity/build.gradle
@@ -10,6 +10,11 @@ android {
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
+        ndk {
+            moduleName 'nativeapp'
+            abiFilters 'arm64-v8a'
+            ldLibs 'log', 'android'
+        }
     }
     buildTypes {
         release {
